[tool.poetry]
name = "hf-model-downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.13"
huggingface-hub = "^0.22.2"
joblib = "^1.4.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
tqdm = "^4.66.2"
validators = "^0.28.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
